<resources>
    <string name="app_name">14 Zile Sport Acasă</string>
    <string name="register">Înregistrează-te pentru a începe!</string>
    <string name="create_profile">Înregistrare</string>
    <string name="sign_in">Conectare</string>
    <string name="please_wait">Te rog, așteaptă&#8230;</string>
    <string name="complete">Completează câmpurile pentru a intra în cont!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Parolă</string>
    <string name="hint_name">Nume complet</string>
    <string name="complete_field">Completează câmpurile pentru a personaliza profilul!</string>
    <string name="nav_my_profile">Profilul Meu</string>
    <string name="nav_sign_out">Deconectare</string>
    <string name="about_me">Despre mine</string>
    <string name="history">Istoric</string>
    <string name="alert">Alertă \u0020 \u0020 hidratare</string>
    <string name="settings">Setări</string>
    <string name="point">.</string>
    <string name="cm"> cm</string>
    <string name="kg"> kg</string>
    <string name="title_water_reminder">Alertă Hidratare</string>
    <string name="height">Înălțime</string>
    <string name="weight">Greutate</string>
    <string name="desired_weight">Greutate dorită</string>
    <string name="birthday">Data nașterii</string>
    <string name="gender">Gen</string>
    <string name="save">Salvare</string>
    <string name="cancel">Anulare</string>
    <string name="update">Modificare</string>
    <string name="add_notification">Adăugare</string>
    <string name="delete_notification">Ștergere</string>
    <string name="add_notification_description">Alarma este activată! Vei primi o notificare la fiecare 15 minute care iți va reaminti să bei apă!</string>
    <string name="drink_water_reminder">Este timpul să te hidratezi!</string>
    <string name="water_benefits">Apa crește arderea caloriilor.</string>
    <string name="toast_start_notification">Tocmai ai activat primirea notificării!</string>
    <string name="toast_stop_notification">Tocmai ai anulat primirea notificării!</string>
    <string name="failed_sign_up">Adresa de email este utilizată de alt cont sau nu are formatul corect!</string>
    <string name="failed_sign_in">Autentificare eșuată!</string>
    <string name="success_sign_up">Te-ai înregistrat cu success!</string>
    <string name="enter_name">Te rog să introduci numele</string>
    <string name="enter_email">Te rog să introduci email-ul</string>
    <string name="enter_password">Te rog să introduci parola</string>
    <string name="please_confirm_password">Te rog să confirmi parola</string>
    <string name="weak_password">Parolă slabă!</string>
    <string name="malformed_email">Formatul adresei este greșit!</string>
    <string name="exist_email">Există deja un utilizator cu această adresă!</string>
    <string name="female">Feminin</string>
    <string name="male">Masculin</string>
    <string name="challenges">Provocări</string>
    <string name="advices">Sfaturi</string>
    <string name="nutritions">Nutriție</string>
    <string name="various">Diverse</string>
    <string name="sport">Sport</string>
    <string name="image">imagine</string>
    <string name="user_image">Fotografia utilizatorului</string>
    <string name="confirm_password">Confirmare Parolă</string>
    <string name="profile_image">profile_image</string>
    <string name="adapter_initialized">aboutMeAdapter should be initialized</string>
    <string name="permission_not_granted">Oops, tocmai ai refuzat permisiunea de accesare a stocării. Poți schimba alegerea din setări.</string>
    <string name="description_advice_title">Pofte</string>
    <string name="content_advice">Poți avea o zi pe săptămână în care să îți dai frâu liber dorințelor.
        Dacă 80% din alimentația ta este sănătoasă, în procentul rămas îți poți satisface poftele. De aceea este recomandată o alimentație echilibrată, pentru a avea rezultate pe termen lung.
        Dietele stricte aduc rezultate imediate, însă ulterior va urma procesul de îngrășare.</string>
    <string name="day_name">Ziua \u0020</string>
    <string name="one">1</string>
    <string name="space">\u0020</string>
    <string name="end_watching">Mulțumesc pentru vizionare!</string>
    <string name="error_occurred">A apărut o eroare!</string>
    <string name="error_confirm_password">Parolele nu se potrivesc!</string>
    <string name="breakfast_name">Mic dejun</string>
    <string name="snack_name">Gustare</string>
    <string name="lunch_name">Prânz</string>
    <string name="dinner_name">Cină</string>
    <string name="breakfast_dayone_level_one">2 ouă fierte + roșii cherry 300g + 1 felie de pâine integrală(25g)</string>
    <string name="snack_dayone_level_one_first">Iaurt grecesc 10% 200g</string>
    <string name="snack_dayone_level_one_second">1 banană mică 150g</string>
    <string name="lunch_dayone_level_one">Piept de curcan la cuptor 150g + sparanghel 300g</string>
    <string name="dinner_dayone_level_one">Salată din piept de pui 100g + năut fiert 100g + roșii cherry 200g + rucola 50g</string>
    <string name="breakfast_daytwo_level_one">Fulgi de ovăz 50g + lapte 3,5% 200ml  + 1 linguriță cacao</string>
    <string name="snack_daytwo_level_one_first">Caju 20g</string>
    <string name="snack_daytwo_level_one_second">Iaurt grecesc 10% 150g</string>
    <string name="lunch_daytwo_level_one">Carne de vită la cuptor 150g + mix de legume congelate 300g</string>
    <string name="dinner_daytwo_level_one">Piept de pui 100g + morcovi 100g + fasole roșie 100g + rucola 50g</string>
    <string name="breakfast_daythree_level_one">Cottage Cheese 2.2% 185g + roșii 100g + 1 felie de pâine integrală(25g)</string>
    <string name="snack_daythree_level_one_first">Căpșuni 200g</string>
    <string name="snack_daythree_level_one_second">Alune crude 20g</string>
    <string name="lunch_daythree_level_one">Piept de curcan 200g + 1 cartof dulce copt 200g</string>
    <string name="dinner_daythree_level_one">Hummus 100g + morcovi 150g + roșii 150g + ceapă(după gust) + năut 150g</string>
    <string name="breakfast_dayfour_level_one">Omletă din 2 albușuri și 1 gălbenuș + roșii cherry 200g + 1 felie de pâine integrală(25g)</string>
    <string name="snack_dayfour_level_one_first">Rondele din făină integrală 50g cu somon 30g</string>
    <string name="snack_dayfour_level_one_second">Iaurt grecesc 10% 150g</string>
    <string name="lunch_dayfour_level_one">Piept de pui 175g + broccoli 350g</string>
    <string name="dinner_dayfour_level_one">Piept de pui 50g + năut fiert 150g + roșii 150g + salată verde 50g</string>
    <string name="breakfast_dayfive_level_one">Fulgi de ovăz 80g + lapte 3,5% 200ml + 1 linguriță cacao</string>
    <string name="snack_dayfive_level_one_first">1 măr Golden</string>
    <string name="snack_dayfive_level_one_second">Iaurt grecesc 10% 150g</string>
    <string name="lunch_dayfive_level_one">Piept de curcan 175g + fasole păstăi congelată 400g</string>
    <string name="dinner_dayfive_menu_level_one">Cottage cheese 2.2 % grăsime 200g + 1 tartină din grâu(20g)</string>
    <string name="breakfast_daysix_level_one">2 ouă fierte + 1 felie de pâine integrală + roșii 200g</string>
    <string name="snack_daysix_level_one_first">1 banană mică 100g</string>
    <string name="snack_daysix_level_one_second">Alune coapte(nu prăjite) 20g</string>
    <string name="lunch_daysix_level_one">Carne de vită 150g + piure de mazăre 350g</string>
    <string name="dinner_daysix_level_one">Ton în sos propriu 125g + roșii 200g + morcovi 100g + rucola</string>
    <string name="breakfast_dayseven_level_one">Fulgi de ovăz 50g + lapte 3,5% 150ml + puțină scorțișoară</string>
    <string name="snack_dayseven_level_one_first">Rondele din faină integrală 50g cu somon 30g</string>
    <string name="snack_dayseven_level_one_second">1 măr Golden mic</string>
    <string name="lunch_dayseven_level_one">Păstrăv la cuptor 175g + broccoli fiert 250g</string>
    <string name="dinner_dayseven_level_one">Cottage cheese 2,2% grăsime 200g + roșii 200g</string>
    <string name="breakfast_dayeight_level_one">Brânză de vaci slabă Covalact 6% 150g + roșii cherry 150g + 1 felie de pâine integrală 25g</string>
    <string name="snack_dayeight_level_one_first">Cicolată neagră 80% 20g</string>
    <string name="snack_dayeight_level_one_second">50g migdale , nuci sau fulgi ovăz cu iaurt</string>
    <string name="lunch_dayeight_level_one">Piept de pui 150g + salată de crudități 250g + ulei de măsline 10ml</string>
    <string name="dinner_dayeight_level_one">Piept de pui 125g + rucola 75g + castravete 100g + roșii cherry 100g + ulei de măsline 10ml</string>
    <string name="breakfast_daynine_level_one"><![CDATA[&#189; avocado + 1 felie de pâine prăjită(aproximativ 25g) + 1 ou fiert + ardei/roșii 100g]]></string>
    <string name="snack_daynine_level_one_first">1 banană mică</string>
    <string name="snack_daynine_level_one_second">50g migdale, nuci sau fulgi ovăz cu iaurt</string>
    <string name="lunch_daynine_level_one">Pește 150g cu mămăliguță 150g</string>
    <string name="dinner_daynine_level_one">250g supă cremă de linte + crutoane 10g(puține, doar de gust)</string>
    <string name="breakfast_dayten_level_one">Fulgi de ovăz 50g + lapte 1,5% 200ml + stafide brune 30g</string>
    <string name="snack_dayten_level_one_first">1 măr + semințe de dovleac 20g</string>
    <string name="snack_dayten_level_one_second">50g migdale, nuci sau fulgi ovăz cu iaurt</string>
    <string name="lunch_dayten_level_one">Somon 150g + mix de legume congelate(fără broccoli sau mazăre, fasole) 200g(cântărite după fierbere sau gătire la aburi) + ulei de măsline 10g</string>
    <string name="dinner_dayten_level_one">Piept de pui 75g + salată verde 125g + roșii cherry 125g + ardei roșu gras 100g + ulei de măsline 10ml</string>
    <string name="breakfast_dayeleven_level_one"><![CDATA[&#189; avocado + 1 felie de pâine prăjită(aproximativ 25g) + ardei/roșii 100g]]></string>
    <string name="snack_dayeleven_level_one_first">1 măr + semințe de dovleac 15g</string>
    <string name="snack_dayeleven_level_one_second">1 banană mare</string>
    <string name="lunch_dayeleven_level_one">Mușchiuleț de porc la cuptor 150g + salată de crudități 200g + ulei de măsline 10g</string>
    <string name="dinner_dayeleven_level_one">250g supă de ciuperci + crutoane 10g</string>
    <string name="breakfast_daytwelve_level_one">Fulgi de ovăz 40g + lapte 1,5% 200ml + miere 10g(o linguriță)</string>
    <string name="snack_daytwelve_level_one_first">Un dulce preferat.</string>
    <string name="snack_daytwelve_level_one_second">50g migdale, nuci sau fulgi ovăz cu iaurt</string>
    <string name="lunch_daytwelve_level_one">Linte fiartă(cântărită înainte de fierbere) 150g + piept de pui 150g</string>
    <string name="dinner_daytwelve_level_one">Salată din: năut 100g + morcovi 150g + ridiche neagră 125g + ulei de măsline 10ml</string>
    <string name="breakfast_daythirteen_level_one">Iaurt grecesc 2% 150g + 1 felie de pâine integrală(aprox 25g) + roșii cherry 100g</string>
    <string name="snack_daythirteen_level_one_first">Semințe de dovleac 10g + 1 măr</string>
    <string name="snack_daythirteen_level_one_second">50g migdale, nuci sau fulgi ovăz cu iaurt</string>
    <string name="lunch_daythirteen_level_one">Paste 300g</string>
    <string name="one_thousand_three_hundred">1300 kcal</string>
    <string name="one_thousand_six_hundred">1600 kcal</string>
    <string name="two_thousand">2000 kcal</string>
    <string name="vegetarian">vegetariană</string>
    <string name="activity_intro">Activitate de introducere</string>
    <string name="language_option">Opțiunea limbii</string>
    <string name="general_settings">Setări generale</string>
    <string name="selected_language">Implicit</string>
    <string name="buttock_thigs">Fese &amp; Coapse</string>
</resources>