<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/challengeFragment">

    <fragment
        android:id="@+id/challengeFragment"
        android:name="com.example.workouthome.fragments.ChallengeFragment"
        android:label="@string/challenges"
        tools:layout="@layout/fragment_challenge">
        <action
            android:id="@+id/action_challengeFragment_to_dayChallengeFragment"
            app:destination="@id/dayChallengeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutMeFragment"
        android:name="com.example.workouthome.fragments.AboutMeFragment"
        android:label="@string/about_me"
        tools:layout="@layout/fragment_about_me" />
    <fragment
        android:id="@+id/nutritionFragment"
        android:name="com.example.workouthome.fragments.NutritionFragment"
        android:label="@string/nutritions"
        tools:layout="@layout/fragment_nutrition">
        <action
            android:id="@+id/action_nutritionFragment_to_dayNutritionFragment"
            app:destination="@id/dayNutritionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/adviceFragment"
        android:name="com.example.workouthome.fragments.AdviceFragment"
        android:label="@string/advices"
        tools:layout="@layout/fragment_advice">
        <action
            android:id="@+id/action_adviceFragment_to_adviceTypeFragment"
            app:destination="@id/adviceTypeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="myArg"
            android:defaultValue="1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.workouthome.fragments.ProfileFragment"
        android:label="@string/nav_my_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_aboutMeFragment"
            app:destination="@id/aboutMeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_profileFragment_to_drinkWaterReminder"
            app:destination="@id/drinkWaterReminder"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <activity
        android:id="@+id/sign_out"
        android:name="com.example.workouthome.activities.IntroActivity"
        android:label="@string/activity_intro"
        tools:layout="@layout/activity_intro" />
    <fragment
        android:id="@+id/adviceTypeFragment"
        android:name="com.example.workouthome.fragments.AdviceTypeFragment"
        tools:layout="@layout/fragment_advice_type" />
    <fragment
        android:id="@+id/dayNutritionFragment"
        android:name="com.example.workouthome.fragments.DayNutritionFragment"
        tools:layout="@layout/fragment_day_nutrition">
        <argument
            android:name="nutritionArgument"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.workouthome.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/dayChallengeFragment"
        android:name="com.example.workouthome.fragments.DayChallengeFragment"
        tools:layout="@layout/fragment_day_challenge">
        <argument
            android:name="challengeBUndle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/drinkWaterReminder"
        android:name="com.example.workouthome.fragments.DrinkWaterReminder"
        android:label="Water Reminder"
        tools:layout="@layout/fragment_drink_water_reminder" />
</navigation>