<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/intro_background"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/intro_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginTop="@dimen/marginTop100"
        android:layout_marginEnd="@dimen/marginEnd10"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/size20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="392dp"
        android:layout_height="@dimen/height210"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/marginEnd10"
        android:contentDescription="@string/image"
        android:src="@drawable/logo_home_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_register" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_button_rounded_sign_in"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/create_profile"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_home" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_button_rounded_sign_in"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/sign_in"

        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/size20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>