<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:text="@string/general_settings"
        android:textAllCaps="true"
        android:textColor="@color/lightgreen"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_language"
                android:layout_width="@dimen/width15"
                android:layout_height="@dimen/height15"
                android:layout_marginStart="@dimen/marginStart5"
                android:layout_marginTop="@dimen/marginTop8"
                android:layout_marginEnd="@dimen/marginEnd5"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_select_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin5"
                android:text="@string/language_option"
                android:textColor="@color/white"
                android:textSize="@dimen/size14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_language"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selected_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop5"
                android:text="@string/selected_language"
                android:textColor="@color/lightgreen"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_select_language"
                app:layout_constraintTop_toBottomOf="@id/tv_select_language" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>