<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/width200"
    android:layout_height="@dimen/height100"
    android:layout_marginStart="@dimen/marginStart3"
    android:layout_marginTop="@dimen/marginTop10"
    android:layout_marginEnd="@dimen/marginEnd2"
    android:layout_marginBottom="@dimen/marginBottom10"
    app:cardCornerRadius="@dimen/cornerRadius8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/full_linear_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/day_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop12"
                android:layout_marginEnd="@dimen/marginEnd2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/challenge_number_day_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="center_vertical|end"
                    android:text="@string/day_name"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/size13" />

                <TextView
                    android:id="@+id/challenge_number_day_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="center_vertical"
                    android:text="@string/one"
                    android:textColor="@color/darkgrey"
                    android:textSize="@dimen/size13" />
            </LinearLayout>

            <TextView
                android:id="@+id/description_challenge"
                android:layout_width="@dimen/width95"
                android:layout_height="wrap_content"
                android:fontFamily="@font/all"
                android:gravity="center"
                android:lines="3"
                android:text="@string/buttock_thigs"
                android:textColor="@color/black"
                android:textSize="@dimen/size15"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/day_linear_layout" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_challenge"
            android:layout_width="@dimen/width100"
            android:layout_height="@dimen/height100"
            android:layout_marginStart="@dimen/marginStart2"
            android:layout_marginEnd="@dimen/marginEnd4"
            android:contentDescription="@string/image"
            android:src="@drawable/buttock"
            app:layout_constraintStart_toEndOf="@id/full_linear_layout"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>