<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin5"
    app:cardBackgroundColor="@color/light_green"
    app:cardCornerRadius="@dimen/cornerRadius8"
    app:cardElevation="@dimen/elevation5"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:background="@color/light_green">

        <ImageView
            android:id="@+id/meals_image"
            android:layout_width="@dimen/width50"
            android:layout_height="@dimen/height50"
            android:layout_marginStart="@dimen/marginStart10"
            android:layout_marginTop="@dimen/marginTop10"
            android:contentDescription="@string/image"
            android:src="@drawable/breakfast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meals_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart20"
            android:layout_marginTop="@dimen/marginTop25"
            android:text="@string/lunch_name"
            android:textColor="@color/black"
            android:textSize="@dimen/size15"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/meals_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/meals_dot"
            android:layout_width="@dimen/width10"
            android:layout_height="@dimen/height10"
            android:layout_marginStart="@dimen/marginStart20"
            android:layout_marginTop="@dimen/marginTop20"
            android:layout_marginEnd="@dimen/marginEnd10"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meals_image" />

        <TextView
            android:id="@+id/meals_content"
            android:layout_width="@dimen/width330"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart10"
            android:layout_marginTop="@dimen/marginTop15"
            android:layout_marginBottom="@dimen/marginBottom20"
            android:maxLines="3"
            android:text="@string/lunch_dayone_level_one"
            android:textColor="@color/black"
            android:textSize="@dimen/size15"
            app:layout_constraintStart_toEndOf="@id/meals_dot"
            app:layout_constraintTop_toBottomOf="@id/meals_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

